2006-05-04  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (SPI_SCREENSAVERRUNNING): Define.
	It had been removed because it's no documented, but Cygwin needs it.

2006-05-04  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/amvideo.h (IFullScreenVideo): Define.
	(BIT_MASKS_MATCH,PALETTISED,PALETTE_ENTRIES,RESET_MASKS,RESET_PALETTE,
	SIZE_EGA_PALETTE,SIZE_MASKS,SIZE_PALETTE): Added Macros.

2006-05-04  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winnls.h (CAL_SYEARMONTH,CAL_ITWODIGITYEARMAX,
	CAL_NOUSEROVERRIDE,CAL_RETURN_NUMBER,CAL_USE_CP_ACP): Documented
	as available on Windows 98 and better.
	(CAL_UMALQURA,CAL_SSHORTESTDAYNAME*): Define, Windows Vista and better.

2006-05-04  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/amvideo.h: New file.
	* include/dshow.h: Include <amvideo.h>.

2006-05-04  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winuser.h (MOUSEEVENTF_*): Cleanup and new define.
	(HSHELL_*): Cleanup and new define.
	(SMTO_*): Cleanup and new define.
	(SPI_*): Cleanup and new define.
	(SPIF_*): Cleanup.
	(HWND_MESSAGE): Windows 2000 only.
	(SIF_*): Cleanup.
	(SWP_*): Cleanup.
	* include/wingdi.h (ETO_*): Cleanup and new define.

2006-05-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/mprapi.h (MPR_SERVER_HANDLE): New typedef.
	* include/mprapi.h (MprAdmin*): Declare functions.
	* lib/mprapi.def (MprAdmin*): Add stubs.

2006-05-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* lib/directx/quartz.def: Move from lib/directx/...
	* lib/quartz.def: ... to lib/

2006-05-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/amaudio.h: New file.
	* include/dshow.h: Include <amaudio.h>.

2006-05-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/errors.h: New file.
	* include/dshow.h: Include <errors.h>.

2006-05-03  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>
