@@ -1229,7 +1229,6 @@ extern "C" {
 #define SPI_ICONHORIZONTALSPACING 0x000D
 #define SPI_ICONVERTICALSPACING 0x0018
 #define SPI_LANGDRIVER 0x000C
-#define SPI_SCREENSAVERRUNNING 0x0061
 #define SPI_SETACCESSTIMEOUT 0x003D
 #define SPI_SETACTIVEWINDOWTRACKING 0x1001
 #define SPI_SETACTIVEWNDTRKTIMEOUT 8195
